I think I fixed bug of failed animation on mobile devices

--- a/css/scrollAnimation.css
+++ b/css/scrollAnimation.css
@@ -5,7 +5,6 @@
     position: fixed;
     z-index: 1000;
     animation-name: screenAnimation;
-    animation-delay: 0.4s;
     animation-duration: 1s;
 }
 
